# online_store

./: README.md  class_index.html  index.html  main.py  pyproject.toml  requirements.txt
src/: class_base_product.py  class_category.py  class_lawn_grass.py  class_product.py  class_smartphone.py  classes.py  utils.py
tests/: conftest_class_category.py  conftest_class_product.py  conftest_classes.py  conftest_main.py  conftest_utils.py  test_class_category.py  test_class_product.py  test_classes.py  test_correct_data.json  test_main.py  test_utils.py
tests/conftest/: conftest_class_lawn_grass.py  conftest_class_product.py  conftest_class_smartphone.py  conftest_utils.py
tests/test/: test_class_category.py  test_class_lawn_grass.py  test_class_product.py  test_class_smartphone.py  test_utils.py
